unpackaged/main/default/objects/LF__Visit__c/fields/LF__Account__c.field-meta.xml
<CustomField>
    <fullName>LF__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>