unpackaged/main/default/objects/LF__Visit__c/fields/LF__AddressLine1__c.field-meta.xml
<CustomField>
    <fullName>LF__AddressLine1__c</fullName>
    <label>Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>