unpackaged/main/default/objects/LF__Visit__c/fields/LF__BusinessID__c.field-meta.xml
<CustomField>
    <fullName>LF__BusinessID__c</fullName>
    <label>BusinessID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>