unpackaged/main/default/objects/LF__Visit__c/fields/LF__Industry__c.field-meta.xml
<CustomField>
    <fullName>LF__Industry__c</fullName>
    <label>Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>