unpackaged/main/default/objects/LF__Visit__c/fields/LF__Keywords__c.field-meta.xml
<CustomField>
    <fullName>LF__Keywords__c</fullName>
    <label>Keywords</label>
    <length>255</length>
    <type>Text</type>
</CustomField>