unpackaged/main/default/objects/LF__Visit__c/fields/LF__Lead_Forensics_Visit__c.field-meta.xml
<CustomField>
    <fullName>LF__Lead_Forensics_Visit__c</fullName>
    <description>The URL to the Lead Forensics site which displays the original visit information.</description>
    <label>Lead Forensics Visit</label>
    <type>Url</type>
</CustomField>