unpackaged/main/default/objects/LF__Visit__c/fields/LF__PostCode__c.field-meta.xml
<CustomField>
    <fullName>LF__PostCode__c</fullName>
    <label>Post Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>