unpackaged/main/default/objects/LF__Visit__c/fields/LF__Telephone__c.field-meta.xml
<CustomField>
    <fullName>LF__Telephone__c</fullName>
    <label>Telephone</label>
    <type>Phone</type>
</CustomField>