unpackaged/main/default/objects/LF__Visit__c/fields/LF__Town__c.field-meta.xml
<CustomField>
    <fullName>LF__Town__c</fullName>
    <label>Town</label>
    <length>255</length>
    <type>Text</type>
</CustomField>