unpackaged/main/default/objects/LF__Visit__c/fields/LF__VisitDateTime__c.field-meta.xml
<CustomField>
    <fullName>LF__VisitDateTime__c</fullName>
    <label>Visit Date/Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>