unpackaged/main/default/objects/LF__Visit__c/listViews/LF__Unassigned.listView-meta.xml
<ListView>
    <fullName>LF__Unassigned</fullName>
    <columns>NAME</columns>
    <columns>LF__VisitDateTime__c</columns>
    <columns>LF__Duration__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LF__Lead__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>LF__Account__c</field>
        <operation>equals</operation>
    </filters>
    <label>Unassigned</label>
</ListView>